# aws-utils

./: .gitignore  README.md  instance_family_cheat_sheet.md  pyproject.toml  requirements.txt
bootstrap/: config_g4dn_xlarge_256gb_dlami_2404.yaml  config_t3a_2xlarge_256gb_2404.yaml  config_t3a_large_32gb_2404.yaml  config_template.yaml  run.sh
bootstrap/steps/: 00_preflight.sh  01_os_updates.sh  02_git_etc.sh  03_python_tooling.sh  03_system_python.sh  04_aws.sh  04_mamba_python_tooling.sh  05_other_setups.sh  05_venv_python_tooling.sh  06_aws.sh  06_torch_setup.sh  07_dlami_torch_verify.sh  07_other_setups.sh  08_claude_code.sh  08_dlami_torch_verify.sh  09_claude_code.sh  09_ide_setup.sh  10_ide_setup.sh  11_torch_setup.sh
configs/: project_paths.py  regions.yaml  user_configs.py
docs/: ARCHITECTURE.md  instances_df_20260101.csv  step_0_overview_setup.md  step_1_launch_manage_ec2.md  step_2_instance_setup.md  step_3_one_shot_launch_bootstrap.md
launch/: c7i_2xlage_125gb_ubuntu_2204_AMD.yaml  g4dn_xlarge_125gb_ubuntu_2204_AMD.yaml  g5.2xlarge_250gb_ubuntu_2204_AMD.yaml  m6i_xlarge_125gb_ubuntu_2204_AMD.yaml  readme.txt  t3a_xlarge_64gb_ubuntu_2204_AMD.yaml  t4g_nano_8gb_ubuntu_2204_ARM.yaml  xskeleton.json
launch/c/: c7i_2xlage_ubuntu_2204.yaml
launch/g/: DLAMI.md  g4dn_xlarge_dlami_ubuntu_2404.yaml  g4dn_xlarge_ubuntu_2204.yaml  g5.2xlarge_ubuntu_2204.yaml  g6.2xlarge_dlami_ubuntu_2404.yaml  g6.xlarge_dlami_ubuntu_2404.yaml
launch/m/: m5a_2xlarge_ubuntu_2404.yaml  m5a_xlarge_ubuntu_2404.yaml  m6i_xlarge_ubuntu_2204.yaml  m7a_2xlarge_ubuntu_2404.yaml  m7i_2xlarge_ubuntu_2404.yaml  m7i_large_ubuntu_2404.yaml  m7i_xlarge_ubuntu_2404.yaml
launch/t/: t3a_2xlarge_ubuntu_2204.yaml  t3a_2xlarge_ubuntu_2404.yaml  t3a_large_ubuntu_2404.yaml  t3a_xlarge_ubuntu_2204.yaml  t3a_xlarge_ubuntu_2404.yaml  t4g_nano_2cpu_512mb_ubuntu_2204_ARM.yaml
outputs/: c_20260101.csv  g4.csv  g4dn.csv  g_20260101.csv  m.csv  m_20260101.csv  p_20260101.csv  r_20260101.csv  t_20260101.csv
scripts/: ec2_launch_bootstrap.py  ec2_launch_from_yaml.py  ec2_specs_price.py
src/: aws_logger.py  get_prices.py  utils.py
zsh_general_info/: ec2_describe_instance_type.zsh  ec2_images_dlami.zsh  ec2_images_ubuntu.zsh  ec2_price.zsh  ec2_specs.zsh  my_ip.zsh
zsh_my_instances/: ec2_allow_ip.zsh  ec2_allow_my_ip.zsh  ec2_cluster1.zsh  ec2_create_sg.zsh  ec2_get_id.zsh  ec2_get_sg_rules.zsh  ec2_my_instances.zsh  ec2_revoke_ip.zsh  ec2_revoke_my_ip.zsh  ec2_start_stop_terminate.zsh
